--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@ h2 {
         <h1>Algorithm Selection literature summary</h1>
         <h2>Last update 13 February 2018</h2>
         <div class="contact">Comments? Suggestions? Corrections?<br/>
-        <a href="mailto:larsko@cs.ubc.ca">Let me know!</a></div>
+        <a href="mailto:larsko@uwyo.edu">Let me know!</a></div>
         <div class="expl">click headings to sort<br/>click citations to
         expand</div>
         <script type="text/javascript">
